Update QuestionDTO object to return tag objects instead of ids